Got rid of horizontal sidebar in chat-view and fixed bug where page was overflowing

--- a/we-talk/public/chat-view.css
+++ b/we-talk/public/chat-view.css
@@ -40,7 +40,8 @@ body {
   box-shadow: none;
     max-height: calc(100% - 60px);
     background: white;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     padding-left: 10px;
 }
 .chat-input {
